--- a/packages/tendermint-rpc/package.json
+++ b/packages/tendermint-rpc/package.json
@@ -50,7 +50,9 @@
     "@cosmjs/stream": "workspace:^",
     "@cosmjs/utils": "workspace:^",
     "axios": "^1.6.0",
+    "https-proxy-agent": "^7.0.4",
     "readonly-date": "^1.0.0",
+    "undici": "^6.10.1",
     "xstream": "^11.14.0"
   },
   "devDependencies": {
